JumpScript/tests/baselines/reference/parserSkippedTokens9.errors.txt
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens9.jump(2,9): error TS1127: Invalid character.


==== tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens9.jump (1 errors) ====
    ; // existing trivia
    /*foo*/ \ /*bar*/
            
!!! error TS1127: Invalid character.